--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>Por <strong>Milton Duarte</strong></p>
     </header>
     <main>
-        <section>
+        <section class="normal">
             <p>Estou ficando cansado <br>
                 Da tal tecnologia <br>
                 Só se fala por e-mail <br>
@@ -23,7 +23,7 @@
                 Vou dizer tudo em poesia.</p>
         </section>
         
-        <section>
+        <section class="imagem" id="foto1">
             <p>Não é mais como era antes<br>
                 É tudo abreviado<br>
                 "Você" só tem duas letras<br>
@@ -34,7 +34,7 @@
             </p>
         </section>
 
-        <section>
+        <section class="normal">
             <p>Arroba agora não pesa<br>
                 É parte de um endereço<br>
                 Ponto final nem se usa<br>
@@ -45,7 +45,7 @@
             </p>
         </section>
 
-        <section>
+        <section class="normal">
             <p>Pra piorar a liguagem<br>
                 O emoticom é um risco<br>
                 Tem símbolo para tudo<br>
@@ -56,7 +56,7 @@
             </p>
         </section>
 
-        <section>
+        <section class="imagem" id="foto2">
             <p>Tenho saudade das cartas<br>
                 Escritas com a própria mão<br>
                 Mandava no mês de Junho<br>
@@ -67,7 +67,7 @@
             </p>
         </section>
 
-        <section>
+        <section class="normal">
             <p>Agora, escrevo e envio<br>
                 Chegando na mesma hora<br>
                 Mas quando vou prosear<br>
@@ -78,7 +78,7 @@
             </p>
         </section>
 
-        <section>
+        <section class="normal">
             <p> Felizmente, pra orar<br>
                 Não precisa de internet<br>
                 Deus escuta todo mundo<br>
